shifted image sizes from absolute to percentage values to fix grid size issues

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -222,8 +222,8 @@ footer .social img {
 }
 .tile-img {
     padding: 20px;
-    width: 380px;
-    height: 280px;
+    width: 90%;
+    height: 90%;
     display: block;
     margin: 0 auto;
 }
